--- a/flappybird/style.css
+++ b/flappybird/style.css
@@ -1,6 +1,16 @@
-/* body{
-  
-} */
+body{
+  font-family: monospace;
+  position: relative;
+}
+
+h1{
+  position: absolute;
+  top: 0;
+  width: 288px;
+  text-align: center;
+  font-size: 50px;
+  color: rgb(255, 255, 255);
+}
 
 canvas{
   border: 1px solid black;
