--- a/LOL-API/react-v/src/components/Header/style.css
+++ b/LOL-API/react-v/src/components/Header/style.css
@@ -3,12 +3,13 @@
   background-color: #9c27b0;
   color: #ffffff;
 
+  top: 0;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
-
+  max-width: 100vw;
   position: fixed;
 
   margin: 0;
@@ -54,7 +55,48 @@
   width: 100%;
 }
 
-.mobile .header-search.active-menu .searchBar,
-.tablet .header-search.active-menu .searchBar{
-  width: 60%;
+.header .header-title{
+  display: flex;
+  align-items: center;
+  margin: 0px 30px;
+}
+
+.header .header-title h1{
+  margin-left: 10px;
+}
+.header .header-search{
+  width: 40%;
+}
+.header .header-search .searchBar{
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  margin-right: 10px;
+  width: 70%;
+}
+.header .header-search .searchBar:focus{
+  background-color: aliceblue;
+  outline: transparent;
+}
+
+.header .header-search .searchButton{
+  padding: 10px 15px;
+  border-radius: 10px;
+  font-size: 15px;
+  font-weight: bolder;
+  border: none;
+  outline: transparent;
+  transition: all ease-in-out .2s;
+
+  background-color: orangered;
+  color: whitesmoke;
+}
+
+.header .header-search .searchButton:hover{
+  background-color: crimson;
+  color: whitesmoke;
+}
+.header .header-search .searchButton:focus{
+  background-color: #a0112e;
+  color: whitesmoke;
 }
