--- a/LOL-API/react-v/src/App.css
+++ b/LOL-API/react-v/src/App.css
@@ -6,16 +6,19 @@
 
 body {
   min-height: 100vh;
+  background-color: blueviolet;
 }
 
 main {
-  margin-top: 80px;
   padding: 16px;
 }
 
 .App{
   min-height: 100vh;
+  width: 100%;
   max-width: 100vw;
   background-color: #323232;
+
+  position: absolute;
 }
 
