--- a/LOL-API/react-v/src/components/Header/style.css
+++ b/LOL-API/react-v/src/components/Header/style.css
@@ -1,5 +1,6 @@
 .header{
-  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
   background-color: #9c27b0;
   color: #ffffff;
 
@@ -13,6 +14,11 @@
   position: fixed;
 
   margin: 0;
+}
+
+.mobile .header-title h1,
+.tablet .header-title h1{
+  font-size: 20px;
 }
 
 .header-bars{
@@ -45,6 +51,7 @@
   position: absolute;
   top: 80px;
   width: 100%;
+  max-width: 100vw;
   text-align: center;
   transition: all .5s ease-in-out;
 }
