--- a/LOL-API/react-v/src/components/ChampionsContainer/ChampionsCard/style.css
+++ b/LOL-API/react-v/src/components/ChampionsContainer/ChampionsCard/style.css
@@ -5,12 +5,12 @@
   max-width: 250px;
   margin: 20px auto;
 
-  border: 1px solid whitesmoke;
+  border: 1px solid white;
   border-radius: 5px;
 
   display: block;
   color: #333;
-  transition: border ease-in-out 0.3s;
+  transition: border ease-in-out 0.5s;
 }
 
 .card:hover{
