--- a/LOL-API/react-v/src/components/Header/style.css
+++ b/LOL-API/react-v/src/components/Header/style.css
@@ -1,5 +1,5 @@
 .header{
-  min-width: 100vw;
+  min-width: 100%;
   max-width: 100vw;
   background-color: #9c27b0;
   color: #ffffff;
@@ -14,6 +14,116 @@
   position: fixed;
 
   margin: 0;
+}
+
+
+.header .header-title{
+  display: flex;
+  align-items: center;
+  margin: 0px 30px;
+}
+
+.header .header-title h1{
+  margin-left: 10px;
+}
+.header .header-search{
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+
+  align-items: center;
+}
+.header .header-search .searchBar{
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  margin:0px 0px 0px 30px;
+  width: 70%;
+}
+.header .header-search .searchBar:focus{
+  background-color: aliceblue;
+  outline: transparent;
+}
+
+.header .header-search .searchButton{
+  padding: 10px 15px;
+  border-radius: 10px;
+  margin: 0px 30px;
+  font-size: 15px;
+  font-weight: bolder;
+  border: none;
+  outline: transparent;
+  transition: all ease-in-out .2s;
+
+  background-color: orangered;
+  color: whitesmoke;
+}
+
+.header .header-search .searchButton:hover{
+  background-color: crimson;
+  color: whitesmoke;
+}
+.header .header-search .searchButton:focus{
+  background-color: #a0112e;
+  color: whitesmoke;
+}
+
+.switch__container{
+  display: flex;
+  align-items: center;
+  margin: 0px 20px;
+}
+.switch {
+  position: absolute;
+  margin:0;
+  visibility: hidden;
+}
+
+.switch + label {
+  display: block;
+  margin: 10px;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  user-select: none;
+}
+
+.switch--shadow + label {
+  padding: 2px;
+  width: 60px;
+  height: 30px;
+  background-color: #ffffff;
+  border-radius: 60px;
+}
+
+.switch--shadow + label:before,
+.switch--shadow + label:after {
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  bottom: 1px;
+  content: '';
+}
+.switch--shadow + label:before {
+  right: 1px;
+  background-color: #f1f1f1;
+  border-radius: 60px;
+  transition: all 0.4s;
+}
+.switch--shadow + label:after {
+  width: 30px;
+  background-color: #fff;
+  border-radius: 100%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transition: all 0.4s;
+}
+
+.switch--shadow:checked + label:before {
+  background-color: #59cf66;
+}
+.switch--shadow:checked + label:after {
+  transform: translateX(30px);
 }
 
 .mobile .header-title h1,
@@ -45,6 +155,9 @@
 
 .mobile .header-search,
 .tablet .header-search{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   background-color: #701b80;
   opacity: 0;
   padding: 24px;
@@ -61,49 +174,12 @@
   opacity: 1;
   width: 100%;
 }
-
-.header .header-title{
-  display: flex;
-  align-items: center;
-  margin: 0px 30px;
+.mobile .header-search .searchBar,
+.tablet .header-search .searchBar{
+  width: 100%;
+  margin: 0;
 }
-
-.header .header-title h1{
-  margin-left: 10px;
-}
-.header .header-search{
-  width: 40%;
-}
-.header .header-search .searchBar{
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  margin-right: 10px;
-  width: 70%;
-}
-.header .header-search .searchBar:focus{
-  background-color: aliceblue;
-  outline: transparent;
-}
-
-.header .header-search .searchButton{
-  padding: 10px 15px;
-  border-radius: 10px;
-  font-size: 15px;
-  font-weight: bolder;
-  border: none;
-  outline: transparent;
-  transition: all ease-in-out .2s;
-
-  background-color: orangered;
-  color: whitesmoke;
-}
-
-.header .header-search .searchButton:hover{
-  background-color: crimson;
-  color: whitesmoke;
-}
-.header .header-search .searchButton:focus{
-  background-color: #a0112e;
-  color: whitesmoke;
+.mobile .header-search .searchButton,
+.tablet .header-search .searchButton{
+  margin: 10px;
 }
