--- a/Pacman/css/style.css
+++ b/Pacman/css/style.css
@@ -1,5 +1,8 @@
 body{
   background: #242424;
+  color: #f5f5f5;
+  font-family: monospace;
+  letter-spacing: 0px;
 }
 
 #screen{
@@ -9,5 +12,5 @@ body{
   image-rendering: -moz-crisp-edges;
   background: #424242;
 
-  width: 700px;
+  width: 500px;
 }
